# PATH

./: .env_dummy  README.MD  README.md  pyproject.toml  requirements.txt
model_garden/: README.md  klAnnealing.py  lwvae.py  omnianomaly.py  sisvae.py  tcnae.py  tevae.py  tevae_keras3.py  vasp.py  vsvae.py
simulation_model/EV/: create_ts_parameter.m  simulation_script_anomaly_parallel.m  simulation_script_normal_parallel.m
simulation_model/EV/Battery Cooling/: CoolingParameters.mat  EVBatteryCoolingSystem.slx  EVBatteryCoolingSystem.slxc  EVBatteryCoolingSystemExample.m  EVBatteryCoolingSystemPlot1Battery.m  EVBatteryCoolingSystemPlot2Heat.m  EVBatteryCoolingSystemPlot3Energy.m  ElectricVehicleThermalManagementVehicleSpeed.mat
simulation_model/EV/Plant/: BattEv.slx  BattEv_Simscape.slx  MotGenEvDynamic.slx  MotGenEvMapped.slx  sscfluids_ev_battery_cooling_variant.slx  sscfluids_ev_thermal_management.slx
simulation_model/EV/System/: EvReferenceApplication.sldd  EvReferenceApplication.slx  EvReferenceApplication.slx.err  EvReferenceApplicationParam.sldd
simulation_model/EV/Work/: BMS_Out.slxc  BMS_Out_msf.lib  BMS_Out_msf.mexw64  BMS_Software.slxc  BMS_Software_msf.lib  BMS_Software_msf.mexw64  Balancing_Logic.slxc  Balancing_Logic_msf.lib  Balancing_Logic_msf.mexw64  BattEv.slxc  (+23 more)
src/: 0_postsim.py  1_data.py  2_training.py  2_training_exp.py  3_inference.py  4_evaluation.py  README.md
ts_functions/: ts_processor.py
tsadis/: README.md  helper_functions.py  requirements.txt  tsadis.py
utilities/: data_class.py  detection_class.py  inference_class.py
(+686 files in other folders)
